--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
 ClimaAnalysis = "29b5916a-a76c-4e73-9657-3c8fd22e65e6"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 GeoMakie = "db073c08-6b98-4ee5-b6a4-5efafb3259c6"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
@@ -13,6 +14,7 @@ WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 [compat]
 Bonito = "4.1.3"
 ClimaAnalysis = "0.5.20"
+Dates = "1.11.0"
 GeoMakie = "0.7.15"
 Statistics = "1.11.1"
 WGLMakie = "0.13.6"
